2002-09-25  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gwaferprog, Gwine, Gspoof.

	* download.html: updated last stable version to 0.6.4 and removed
	link to 0.6.2.

2002-08-28  Damon Chaplin  <damon@ximian.com>

	* index.html: added info about French Glade user group & updated docs.

	* apps.html: added Schlange, SIPSet, TiLP & pxesconfig.

2002-07-01  Damon Chaplin  <damon@ximian.com>

	* apps.html: added OggDoctor and Xsox.

2002-05-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Bond.

2002-05-20  Damon Chaplin  <damon@ximian.com>

	* apps.html: added GnomeLDAP.

2002-05-01  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Ishan's Glade port.

	* apps.html: updated xcave link. Oops, forgot to commit before.

2002-04-02  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Knocker.

2002-03-27  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Stoq and GnomeRSVP.

2002-03-18  Damon Chaplin  <damon@ximian.com>

	* apps.html: updated gdcalc.

2002-03-12  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Gneuro.

	* index.html: added link to Glade port to windows.

2002-03-06  Damon Chaplin  <damon@ximian.com>

	* apps.html: added HushTones IM.

2002-02-26  Damon Chaplin  <damon@ximian.com>

	* links.html: added SnapperPerl.

2002-02-22  Damon Chaplin  <damon@ximian.com>

	* apps.html: added XMMS-Crossfade.

2002-02-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added polyXmass.

2002-02-11  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gEuCo.

2002-02-08  Damon Chaplin  <damon@ximian.com>

	* apps.html: updated link to Oww.

2002-02-06  Damon Chaplin  <damon@ximian.com>

	* index.html: 
	* download.html: 
	* history.html: added 0.6.4 release stuff.

2002-02-04  Damon Chaplin  <damon@ximian.com>

	* apps.html: added AVR Delay loop Generator.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* index.html: added new tutorial.

	* download.html: updated last stable version to 0.6.2.
