@@ -807,6 +807,12 @@ a wine cellar manager written in Perl (with Glade-Perl).
 allows you to create and send arbitrary TCP/IP packets.
 </ul>
 
+<ul>
+<li><a href="http://gnopa.sourceforge.net">Gnopa</a> -
+a frontend for interfacing with the Compaq PA1 and PA2 Personal
+Audio MP3 players.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
