@@ -1,4 +1,10 @@
+2002-10-06  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added Gnopa.
+
 2002-09-25  Damon Chaplin  <damon@ximian.com>
+
+	* download.html: fix link to tarball.
 
 	* apps.html: added gwaferprog, Gwine, Gspoof.
 
